# 1

./: CMakeLists.txt  c-rational.cpp  c-rational.h  cpp-rational.cpp  cpp-rational.h  lab1.ternovsky.cpp
